# packet-meta-classifier

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md
classifiers/internet/: Cargo.toml  README.md
classifiers/internet/examples/current_traffic/: main.rs
classifiers/internet/examples/real_traffic/: main.rs
classifiers/internet/src/: http.rs  ip.rs  lib.rs  tcp.rs  udp.rs
classifiers/internet/tests/: component.rs  tcp.rs
classifiers/internet/tests/captures/: ipv4-udp-echo.pcap  ipv6-http-get.pcap
classifiers/internet/tests/util/: capture.rs  mod.rs
gpc-core/: Cargo.toml  README.md
gpc-core/src/: analyzer_cache.rs  classifier.rs  dependency_checker.rs  engine.rs  expression.rs  flow_pool.rs  lib.rs  loader.rs
gpc-core/src/base/: analyzer.rs  builder.rs  flow.rs  id.rs  (+2 more)
gpc-internet/: Cargo.toml
gpc-internet/src/: lib.rs  tcp.rs
gpc-internet/tests/: tcp.rs
gpc-testing/: Cargo.toml  README.md
gpc-testing/src/: capture.rs  common.rs  injector.rs  lib.rs  logger.rs  summary.rs
pmc-core/: Cargo.toml  README.md
pmc-core/src/: analyzer_cache.rs  dependency_checker.rs  engine.rs  expression.rs  flow_pool.rs  loader.rs
pmc-testing/: Cargo.toml  README.md
pmc-testing/src/: capture.rs  common.rs  injector.rs  logger.rs  summary.rs
src/: analyzer.rs  classifier.rs  classifiers.rs  configuration.rs  context.rs  core.rs  engine.rs  expression.rs  flow.rs  internet.rs  lib.rs  main.bk.rs  main.rs  packet_info.rs  protocols.rs  rule.rs  rules.rs
src/analyzers/: eth.rs  ip.rs  tcp.rs
src/backup/: analyzer.rs
src/classifier/: analyzer_cache.rs  dependency.rs  id.rs  loader.rs
src/classifiers/: ip.rs  ipv4.rs  tcp.rs
src/core/: classifier.rs  dependency_checker.rs  expression.rs  flow_pool.rs  handler.rs  loader.rs  mod.rs  packet.rs
src/internet/: ip.rs  mod.rs  tcp.rs
src/protocols/: eth.rs  ip.rs  tcp.rs
src/rules/: classification.rs  classification_rules.rs  expression.rs  matching.rs  matching_rules.rs  mod.rs  rule.rs  rules.rs  values.rs
src/util/: capture.rs
tests/: basic.rs  tcp.rs
tests/util/: capture.rs  common.rs  injector.rs  logger.rs  mod.rs  summary.rs
(+28 files in other folders)
