[package]
name = "gpc-testing"
version = "0.1.0"
authors = ["lemunozm <lemunozm@gmail.com>"]
edition = "2018"

[features]
classifier-logs = []
testing-logs = []

[dependencies]
gpc-core = { path = "../gpc-core" }
log = "0.4"
arrayref = "0.3.6"
lazy_static = "1.4"
pcap-file = "1.1.0"
fern = { version = "0.6", features = ["colored"] }
chrono = "0.4.19"
colored = "2.0.0"
