[package]
name = "pmc-testing"
version = "0.1.0"
authors = ["lemunozm <lemunozm@gmail.com>"]
edition = "2018"

[features]
default = []
classifier-logs = []
testing-logs = []

[dependencies]
pmc-core = { path = "../pmc-core" }
log = "0.4"
lazy_static = "1.4"
fern = { version = "0.6", features = ["colored"] }
chrono = "0.4.19"
colored = "2.0.0"
