[package]
name = "internet"
version = "0.1.0"
authors = ["lemunozm <lemunozm@gmail.com>"]
edition = "2018"

[dependencies]
pmc-core = { path = "../../pmc-core" }
log = "0.4"
arrayref = "0.3.6"
num-traits = "0.2"
num-derive = "0.3"
strum = { version = "0.21.0", features = ["derive"]}

[dev-dependencies]
pmc-testing = { path = "../../pmc-testing" }
pcap-file = "1.1.0"
